@@ -1,5 +1,9 @@
 **6.0.8 (2015-02-04)**
 
+* Fix an issue where the ``--download`` flag would cause pip to no longer use
+  randomized build directories.
+
+
 **6.0.7 (2015-01-28)**
 
 * Fix a regression where Numpy requires a build path without symlinks to
